[package]
name = "cargo-nbuild"
version = "0.1.0"
edition = "2021"
authors = ["welschmorgan@gmail.com"]
description = "Primary goal was to wrap cargo build to filter its output, but can be used on any build report"

[[bin]]
name = "cargo-nbuild"

path = "src/main.rs"

[lib]
name = "cargo_nbuild"
path = "src/lib/mod.rs"

[dependencies]
ratatui = { version = "0.28.1", features = ["serde"] }
lazy_static = "1"
regex = "1.10.6"
chrono = "0.4.38"
