[package]
name = "cargo-nbuild"
version = "0.1.0"
edition = "2021"
authors = ["Morgan Welsch <welschmorgan@gmail.com>"]
description = """A command line utility to wrap build reports.
It helps with display and finding of errors, warnings and notes.
It was primarily conceived to wrap the `cargo build` process

You can pipe any build report through stdin."""

[[bin]]
name = "cargo-nbuild"
path = "src/main.rs"

[lib]
name = "cargo_nbuild"
path = "src/lib/mod.rs"

[dependencies]
ratatui = { version = "0.28.1", features = ["serde"] }
lazy_static = "1"
regex = "1.10.6"
chrono = "0.4.38"
